--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
                     <%= render "pages/footer" %>
                   </div>
                 </div>
+                <div id="result_search"></div>
               </div>
             </div>
           </div>
