--- a/app/views/admin/layouts/_header.html.erb
+++ b/app/views/admin/layouts/_header.html.erb
@@ -9,9 +9,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <%= link_to root_path do %>
             <%= image_tag "facebook.png", style: "width: 150px;height:28px" %>
-          </a>
+          <% end %>
         </div>
         <div id="navbar-collapse" class="collapse navbar-collapse">
           <form class="navbar-form navbar-left" role="search">
@@ -47,7 +47,7 @@
               </a>
               <ul class="dropdown-menu dropdown-block" role="menu">
                 <li>
-                  <%= link_to "Logout", destroy_user_session_path %>
+                  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
                 </li>
               </ul>
             </li>
