--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -9,16 +9,12 @@
     <%= link_to "F", root_path, class: "navbar-brand logo" %>
   </div>
   <nav class="collapse navbar-collapse" role="navigation">
-    <form class="navbar-form navbar-left">
-        <div class="input-group input-group-sm" style="max-width:360px;">
-          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-          <div class="input-group-btn">
-            <button class="btn btn-default" type="submit">
-              <i class="glyphicon glyphicon-search"></i>
-            </button>
-          </div>
-        </div>
-    </form>
+    <%= form_tag "#", method: :get, class: "navbar-form navbar-left" do %>
+      <div class="input-group input-group-sm" style="max-width:360px;">
+        <%= text_field_tag "name", params[:name], class: "form-control",
+          id: "search_user" %>
+      </div>
+    <% end %>
     <ul class="nav navbar-nav">
       <li>
         <%= link_to root_path do %>
@@ -54,6 +50,11 @@
           <i class="glyphicon glyphicon-user"></i>
         </a>
         <ul class="dropdown-menu">
+          <li>
+            <%= link_to edit_user_registration_path do %>
+              <i class="glyphicon glyphicon-refresh"></i> Đổi mật khẩu
+            <% end %>
+          </li>
           <li>
             <%= link_to destroy_user_session_path, method: :delete do %>
               <i class="fa fa-sign-out"></i> Đăng xuất
