--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,47 +1,4 @@
 <div class="col-md-12">
-  <div class="fb-profile">
-    <%=  image_tag "img_bia.jpeg", class: "fb-image-lg" %>
-    <% if current_user.image? %>
-      <%= image_tag current_user.image.url, class: "fb-image-profile thumbnail" %>
-    <% else %>
-        <%= image_tag "user2.png", class: "fb-image-profile thumbnail",
-          style: "width:100px;height:100px;float:left" %>
-    <% end %>
-    <div class="fb-profile-text">
-      <h1><%= current_user.name %></h1>
-    </div>
-  </div>
-  <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
-    <div class="btn-group" role="group">
-      <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab">
-        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-        <div class="hidden-xs">History</div>
-      </button>
-    </div>
-    <div class="btn-group" role="group">
-      <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab">
-        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-        <div class="hidden-xs">Favorites</div>
-      </button>
-    </div>
-    <div class="btn-group" role="group">
-      <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab">
-        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-        <div class="hidden-xs">Following</div>
-      </button>
-    </div>
-  </div>
-  <div class="well">
-    <div class="tab-content">
-      <div class="tab-pane fade in active" id="tab1">
-        <h3>This is tab 1</h3>
-      </div>
-      <div class="tab-pane fade in" id="tab2">
-        <h3>This is tab 2</h3>
-      </div>
-      <div class="tab-pane fade in" id="tab3">
-        <h3>This is tab 3</h3>
-      </div>
-    </div>
-  </div> 
+  <%= render "profile" %>
 </div>
+<%= render "favorite" %>
