--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="/" class="navbar-brand logo">F</a>
+    <%= link_to "F", root_path, class: "navbar-brand logo" %>
   </div>
   <nav class="collapse navbar-collapse" role="navigation">
     <form class="navbar-form navbar-left">
@@ -21,7 +21,9 @@
     </form>
     <ul class="nav navbar-nav">
       <li>
-        <a href="#"><i class="glyphicon glyphicon-home"></i> Home</a>
+        <%= link_to root_path do %>
+          <i class="glyphicon glyphicon-home"></i> Home
+        <% end %>
       </li>
       <li>
         <a href="#postModal" role="button" data-toggle="modal">
@@ -46,9 +48,9 @@
         </a>
         <ul class="dropdown-menu">
           <li>
-            <a href="">
+            <%= link_to destroy_user_session_path, method: :delete do %>
               <i class="fa fa-sign-out"></i> Đăng xuất
-            </a>
+            <% end %>
           </li>
         </ul>
       </li>
