--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "pages/content_left" %>
 <div class="col-sm-8">
   <h2 style="color:blue"><i class="fa fa-newspaper-o"></i> Bảng tin</h2>
   <div class="panel panel-default">
