--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,52 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+<div class="container" style="margin-top:40px">
+  <div class="row">
+    <div class="col-sm-8 col-md-6 col-md-offset-3" >
+      <div class="panel panel-default">
+        <div class="panel-heading" style="text-align:center">
+          <strong> Forgot your pasword?</strong>
+        </div>
+        <div class="panel-body">
+          <%= form_for(resource, as: resource_name,
+            url: password_path(resource_name),
+            html: { method: :put }) do |f| %>
+            <%= render "shared/error_messages", object: f.object %>  
+            <%= f.hidden_field :reset_password_token %>
+            <fieldset>
+              <div class="row">
+                <div class="col-sm-12 col-md-10  col-md-offset-1 ">
+                  <div class="form-group">
+                    <div class="input-group">
+                      <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-lock"></i>
+                      </span>
+                      <%= f.label :password, "New password" %><br />
+                      <% if @minimum_password_length %>
+                        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+                      <% end %>
+                      <%= f.password_field :password, autofocus: true,
+                        autocomplete: "new-password", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="input-group">
+                      <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-lock"></i>
+                      </span>
+                      <%= f.label :password_confirmation, "Confirm new password" %><br />
+                      <%= f.password_field :password_confirmation,
+                        autocomplete: "off", class: "form-control" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <%= f.submit "Change my password",
+                      class: "btn btn-lg btn-primary btn-block" %>
+                  </div>
+                </div>
+              </div>
+            </fieldset>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
