--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,37 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container" style="margin-top:40px">
+  <div class="row">
+    <div class="col-sm-8 col-md-6 col-md-offset-3" >
+      <div class="panel panel-default">
+        <div class="panel-heading" style="text-align:center">
+          <strong> Forgot your pasword?</strong>
+        </div>
+        <div class="panel-body">
+          <%= form_for(resource, as: resource_name,
+            url: password_path(resource_name),
+            html: { method: :post }) do |f| %>
+            <%= render "shared/error_messages", object: f.object %>  
+            <fieldset>
+              <div class="row">
+                <div class="col-sm-12 col-md-10  col-md-offset-1 ">
+                  <div class="form-group">
+                    <div class="input-group">
+                      <span class="input-group-addon">
+                        <i class="fa fa-inbox"></i>
+                      </span>
+                      <%= f.email_field :email, autofocus: true,
+                        class: "form-control", autocomplete: "email" %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <%= f.submit "Sent email reset password",
+                      class: "btn btn-lg btn-primary btn-block" %>
+                  </div>
+                </div>
+              </div>
+            </fieldset>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
