--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -486,3 +486,7 @@ ul.timeline > li:before {
     border-radius: 50%;
 }
 .border-b-1 {border-bottom: 1px solid rgba(162,162,162,.16);}
+
+#infinite-scrolling {
+  display: none;
+}
