--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,107 +2,9 @@
 <div class="col-sm-8" id="posts">
   <h2 style="color:blue"><i class="fa fa-newspaper-o"></i> Bảng tin</h2>
   <div id="post-data">
-    <%  @articles.each do |article| %>
-      <div class="panel panel-default post-id" id="<%= article.id %>">
-        <div class="panel-heading">
-          <a href="#" class="pull-right">
-            <%= Time.at(Time.current.to_i - article.created_at.to_i).utc.strftime("%Hh%Mm") %> ago
-          </a> 
-          <h4 style="font-weight:bold;"><%= article.user.name %></h4>
-        </div>
-        <div class="panel-body abc">
-          <p><code><%= article.title %></code></p>
-          <center>
-            <% if article.image? %>
-              <%= image_tag article.image.url, class: "img-responsive" %>
-            <% end %>
-          </center>
-          <div class="clearfix"></div>
-          <hr>
-          <p>
-            <%= article.content %>
-          </p>
-          <hr>
-          <div class="input-group">
-            <div class="input-group-btn">
-              <%= hidden_field_tag :user_id, current_user.id, class: "user_id" %>
-              <%= hidden_field_tag :article_id, article.id, class: "article_id" %>
-              <%= like = Like.where(user_id: current_user.id, article_id: article.id, status: 1).first %>
-              <%= unlike = Like.where(user_id: current_user.id, article_id: article.id, status: 0).first %>
-              <% if like %>
-                <span class="btn btn-default like_new" style="background-color:blue;color:white">
-                  <i class="glyphicon glyphicon-thumbs-up"></i>
-                </span>
-                <%= hidden_field_tag :number_one, 1, class: "number_one" %>
-                <%= hidden_field_tag :number_tow, 0, class: "number_tow" %>
-                <span class="btn btn-default unlike_new">
-                  <i class="glyphicon glyphicon-thumbs-down"></i>
-                </span>
-              <% elsif unlike %>
-                <span class="btn btn-default like_new">
-                  <i class="glyphicon glyphicon-thumbs-up"></i>
-                </span>
-                <%= hidden_field_tag :number_one, 0, class: "number_one" %>
-                <%= hidden_field_tag :number_tow, 1, class: "number_tow" %>
-                <span class="btn btn-default unlike_new" style="background-color:blue;color:white">
-                  <i class="glyphicon glyphicon-thumbs-down"></i>
-                </span>
-              <% else %>
-                <span class="btn btn-default like_new">
-                  <i class="glyphicon glyphicon-thumbs-up"></i>
-                </span>
-                <%= hidden_field_tag :number_one, 0, class: "number_one" %>
-                <%= hidden_field_tag :number_tow, 0, class: "number_tow" %>
-                <span class="btn btn-default unlike_new">
-                  <i class="glyphicon glyphicon-thumbs-down"></i>
-                </span>
-              <% end %>
-              <span class="btn btn-default comment">
-                <i class="fa fa-comment-o"></i> Comment
-              </span>
-            </div>
-          </div>
-          <br>
-          <div class="dat" id="dat_<%= article.id %>">
-            <span>
-              <%= article.likes.where(status: 1).count %> Likes, 
-              <%= article.likes.where(status: 0).count %> Unlikes, 
-              <%= article.comments.count %> comment
-            </span>
-          </div>
-        </div>
-        <div class="panel-footer" style="display:none" id="list_comment">
-          <% article.comments.each do |comment| %>
-            <div class="col-md-12" style="margin:5px">
-              <div class="col-md-4">
-                <% if comment.user.image? %>
-                  <%= image_tag comment.user.image.url, style: "width: 50px; height: 50px;" %>
-                <% end %>
-              <%= comment.user.name %>
-              </div>
-              <div class="col-md-8">
-                <%= comment.content %>
-                <br><i><%= Time.at(Time.current.to_i - comment.created_at.to_i).utc.strftime("%Hh%Mm") %> ago</i>
-              </div>
-            </div>
-          <% end %>
-          <div class="result_comment" id="new_<%= article.id %>"></div>
-          <div class="bde">
-            <%= hidden_field_tag :user_id, current_user.id, class: "userid" %>
-            <%= hidden_field_tag :article_id, article.id, class: "articleid" %>
-            <%= text_field_tag :content, params[:content],
-              class: "form-control content_comment", placeholder: "Add a comment..",
-              style: "margin:5px 0 5px 0;", required: true  %>
-            <%= submit_tag "Comment", class: "form-control btn btn-primary button_comment" %>
-          </div>
-        </div>
-      </div>
-    <% end %> 
+    <%= render @articles %>
   </div>
-</div>
-<div class="ajax-load text-center" style="display:block">
-  <p>
-    <%= image_tag "loader.gif" %>
-    Loading More post
-  </p>
+  <div id="infinite-scrolling">
+    <%= paginate @articles, theme: "twitter-bootstrap-3" %>
+  </div>
 </div>
