--- a/app/views/articles/_loadmore_detail.html.erb
+++ b/app/views/articles/_loadmore_detail.html.erb
@@ -21,16 +21,22 @@
       <hr>
       <div class="input-group">
         <div class="input-group-btn">
-          <%= hidden_field_tag :user_id, current_user.id, class: "user_id" %>
           <%= hidden_field_tag :article_id, article.id, class: "article_id" %>
-          <%= like = Like.where(user_id: current_user.id, article_id: article.id, status: 1).first %>
-          <%= unlike = Like.where(user_id: current_user.id, article_id: article.id, status: 0).first %>
-          <% if like %>
+          <% like = Like.status_like(current_user.id, article.id, Like::ENJOY).first %>
+          <% unlike = Like.status_like(current_user.id, article.id, Like::DISLIKE).first %>
+          <% if article.user_id == current_user.id %>
+            <span class="btn btn-default" >
+              <i class="glyphicon glyphicon-thumbs-up" ></i>
+            </span>
+            <span class="btn btn-default">
+              <i class="glyphicon glyphicon-thumbs-down"></i>
+            </span>
+          <% elsif like %>
             <span class="btn btn-default like_new" style="background-color:blue;color:white">
               <i class="glyphicon glyphicon-thumbs-up"></i>
             </span>
-            <%= hidden_field_tag :number_one, 1, class: "number_one" %>
-            <%= hidden_field_tag :number_tow, 0, class: "number_tow" %>
+            <%= hidden_field_tag :number_one, Settings.one, class: "number_one" %>
+            <%= hidden_field_tag :number_tow, Settings.zero, class: "number_tow" %>
             <span class="btn btn-default unlike_new">
               <i class="glyphicon glyphicon-thumbs-down"></i>
             </span>
@@ -38,8 +44,8 @@
             <span class="btn btn-default like_new">
               <i class="glyphicon glyphicon-thumbs-up"></i>
             </span>
-            <%= hidden_field_tag :number_one, 0, class: "number_one" %>
-            <%= hidden_field_tag :number_tow, 1, class: "number_tow" %>
+            <%= hidden_field_tag :number_one, Settings.zero, class: "number_one" %>
+            <%= hidden_field_tag :number_tow, Settings.one, class: "number_tow" %>
             <span class="btn btn-default unlike_new" style="background-color:blue;color:white">
               <i class="glyphicon glyphicon-thumbs-down"></i>
             </span>
@@ -47,8 +53,8 @@
             <span class="btn btn-default like_new">
               <i class="glyphicon glyphicon-thumbs-up"></i>
             </span>
-            <%= hidden_field_tag :number_one, 0, class: "number_one" %>
-            <%= hidden_field_tag :number_tow, 0, class: "number_tow" %>
+            <%= hidden_field_tag :number_one, Settings.zero, class: "number_one" %>
+            <%= hidden_field_tag :number_tow, Settings.zero, class: "number_tow" %>
             <span class="btn btn-default unlike_new">
               <i class="glyphicon glyphicon-thumbs-down"></i>
             </span>
@@ -61,8 +67,8 @@
       <br>
       <div class="dat" id="dat_<%= article.id %>">
         <span>
-          <%= article.likes.where(status: 1).count %> Likes, 
-          <%= article.likes.where(status: 0).count %> Unlikes, 
+          <%= article.likes.list_likes.count %> Likes, 
+          <%= article.likes.list_unlike.count %> Unlikes, 
           <%= article.comments.count %> comment
         </span>
       </div>
@@ -84,7 +90,6 @@
       <% end %>
       <div class="result_comment" id="new_<%= article.id %>"></div>
       <div class="bde">
-        <%= hidden_field_tag :user_id, current_user.id, class: "userid" %>
         <%= hidden_field_tag :article_id, article.id, class: "articleid" %>
         <%= text_field_tag :content, params[:content],
           class: "form-control content_comment", placeholder: "Add a comment..",
