--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -24,19 +24,26 @@
     </button>
   </div>
   <div class="btn-group" role="group">
-    <% if @user.id == current_user.id %>
-      <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab">
-        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-        <div class="hidden-xs">Following</div>
-      </button>
-    <% else %>
-      <button type="button" id="follow" class="btn btn-default">
-        <span class="glyphicon glyphicon-plus"></span>
-        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-        <div class="hidden-xs">Follow</div>
-      </button>
-    <% end %>
+    <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab">
+      <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+      <div class="hidden-xs">Following</div>
+    </button>
   </div>
+  <% if current_user.id != @user.id %>
+    <div class="btn-group" role="group">
+      <%= hidden_field_tag :user_id, current_user.id, class: "currentuser_id" %>
+      <%= hidden_field_tag :following_id, @user.id, class: "followingid" %>
+      <button type="button" id="follow" class="btn btn-default" href="#" data-toggle="tab">
+          <% if @flag %>
+            <span class="glyphicon glyphicon-minus"></span>
+            <br>Unfollow
+          <% else %>
+            <span class="glyphicon glyphicon-plus"></span>
+            <br>Follow
+          <% end %>
+      </button>
+    </div>
+  <% end %>
 </div>
 <div class="well">
   <div class="tab-content">
@@ -70,7 +77,7 @@
       </div>
     </div>
     <div class="tab-pane fade in" id="tab3">
-      <h3>This is tab 3</h3>
+      <%= render "detail_follow" %>
     </div>
   </div>
 </div> 
