--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,8 @@ html, body {
   height: 100%;
   font-family:verdana,arial,sans-serif;
   color:#555555;
+  overflow: auto;
+  width: 100%;
 }
 
 .nav {
