--- a/app/views/pages/_like_detail.html.erb
+++ b/app/views/pages/_like_detail.html.erb
@@ -1,5 +1,5 @@
 <span>
-  <%= @new.likes.where(status: 1).count %> Likes, 
-  <%= @new.likes.where(status: 0).count %> Unlikes, 
-  <%= @new.comments.count %> comment
+  <%= @count_likes %> Likes, 
+  <%= @count_unlikes %> Unlikes, 
+  <%= @count_comments %> comment
 </span>
