--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -2,5 +2,5 @@
   <div class="col-sm-12">
     <legend><%= current_user.name %>:</legend>
   </div>
-  <%= render "form_new" %>
+  <%= render "admin/articles/form_article" %>
 </div>
