--- a/app/views/admin/layouts/_sidebar.html.erb
+++ b/app/views/admin/layouts/_sidebar.html.erb
@@ -30,19 +30,19 @@
       <li>
         <a class="accordion-toggle collapsed toggle-switch" data-toggle="collapse" href="#submenu-3">
           <span class="sidebar-icon"><i class="fa fa-newspaper-o"></i></span>
-          <span class="sidebar-title">News</span>
+          <span class="sidebar-title">Articles</span>
           <b class="caret"></b>
         </a>
         <ul id="submenu-3" class="panel-collapse collapse panel-switch" role="menu">
           <li>
-            <%= link_to admin_news_index_path do %>
+            <%= link_to admin_articles_path do %>
               <i class="glyphicon glyphicon-th-list"></i> 
-              List of news
+              List of articles
             <% end %>
           </li>
           <li>
-            <%= link_to new_admin_news_path do %>
-              <i class="glyphicon glyphicon-plus"></i> More news
+            <%= link_to new_admin_article_path do %>
+              <i class="glyphicon glyphicon-plus"></i> More articles
             <% end %>
           </li>
         </ul>
