--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
       <% if user_signed_in? %>
         <div class="wrapper">
           <div class="box">
-            <div class="row row-offcanvas row-offcanvas-left">
+            <div class="row row-offcanvas row-offcanvas-left rrr">
               <%= render "pages/sidebar" %>
-              <div class="column col-sm-10 col-xs-11" id="main">
+              <div class="column col-sm-10 col-xs-11 load_article" id="main">
                 <%= render "pages/header" %>
                 <div class="padding">
                   <div class="full col-sm-9">
