--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,100 +1,13 @@
 <%= render "pages/content_left" %>
-<div class="col-sm-8">
+<div class="col-sm-8" id="">
   <h2 style="color:blue"><i class="fa fa-newspaper-o"></i> Bảng tin</h2>
-  <% @news.each do |n| %> 
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <a href="#" class="pull-right">
-          <%= Time.at(Time.current.to_i - n.created_at.to_i).utc.strftime("%Hh%Mm") %> ago
-        </a> 
-        <h4 style="font-weight:bold;"><%= n.user.name %></h4>
-      </div>
-      <div class="panel-body abc">
-        <p><code><%= n.title %></code></p>
-        <center>
-          <% if n.image? %>
-            <%= image_tag n.image, class: "img-responsive" %>
-          <% end %>
-        </center>
-        <div class="clearfix"></div>
-        <hr>
-        <p>
-          <%= n.content %>
-        </p>
-        <hr>
-        <div class="input-group">
-          <div class="input-group-btn">
-            <%= hidden_field_tag :user_id, current_user.id, class: "user_id" %>
-            <%= hidden_field_tag :new_id, n.id, class: "new_id" %>
-            <%= like = Like.where(user_id: current_user.id, new_id: n.id, status: 1).first %>
-            <%= unlike = Like.where(user_id: current_user.id, new_id: n.id, status: 0).first %>
-            <% if like %>
-              <span class="btn btn-default like_new" style="background-color:blue;color:white">
-                <i class="glyphicon glyphicon-thumbs-up"></i>
-              </span>
-              <%= hidden_field_tag :number_one, 1, class: "number_one" %>
-              <%= hidden_field_tag :number_tow, 0, class: "number_tow" %>
-              <span class="btn btn-default unlike_new">
-                <i class="glyphicon glyphicon-thumbs-down"></i>
-              </span>
-            <% elsif unlike %>
-              <span class="btn btn-default like_new">
-                <i class="glyphicon glyphicon-thumbs-up"></i>
-              </span>
-              <%= hidden_field_tag :number_one, 0, class: "number_one" %>
-              <%= hidden_field_tag :number_tow, 1, class: "number_tow" %>
-              <span class="btn btn-default unlike_new" style="background-color:blue;color:white">
-                <i class="glyphicon glyphicon-thumbs-down"></i>
-              </span>
-            <% else %>
-              <span class="btn btn-default like_new">
-                <i class="glyphicon glyphicon-thumbs-up"></i>
-              </span>
-              <%= hidden_field_tag :number_one, 0, class: "number_one" %>
-              <%= hidden_field_tag :number_tow, 0, class: "number_tow" %>
-              <span class="btn btn-default unlike_new">
-                <i class="glyphicon glyphicon-thumbs-down"></i>
-              </span>
-            <% end %>
-            <span class="btn btn-default comment">
-              <i class="fa fa-comment-o"></i> Comment
-            </span>
-          </div>
-        </div>
-        <br>
-        <div class="dat" id="dat_<%= n.id %>">
-          <span>
-            <%= n.likes.where(status: 1).count %> Likes, 
-            <%= n.likes.where(status: 0).count %> Unlikes, 
-            <%= n.comments.count %> comment
-          </span>
-        </div>
-      </div>
-      <div class="panel-footer" style="display:none" id="list_comment">
-        <% n.comments.each do |comment| %>
-          <div class="col-md-12" style="margin:5px">
-            <div class="col-md-4">
-              <% if comment.user.image? %>
-                <%= image_tag comment.user.image.url, style: "width: 50px; height: 50px;" %>
-              <% end %>
-             <%= comment.user.name %>
-            </div>
-            <div class="col-md-8">
-              <%= comment.content %>
-              <br><i><%= Time.at(Time.current.to_i - comment.created_at.to_i).utc.strftime("%Hh%Mm") %> ago</i>
-            </div>
-          </div>
-        <% end %>
-        <div class="result_comment" id="new_<%= n.id %>"></div>
-        <div class="bde">
-          <%= hidden_field_tag :user_id, current_user.id, class: "userid" %>
-          <%= hidden_field_tag :new_id, n.id, class: "newid" %>
-          <%= text_field_tag :content, params[:content],
-            class: "form-control content_comment", placeholder: "Add a comment..",
-            style: "margin:5px 0 5px 0;", required: true  %>
-          <%= submit_tag "Comment", class: "form-control btn btn-primary button_comment" %>
-        </div>
-      </div>
-    </div>
-  <% end %>
+  <div id="list_articles">
+      <%= render @articles %>
+
+  </div>
+  <%= paginate @articles %>
 </div>
+<div id="loadding" class="col-sm-8 hidden">
+  LOADDING ...
+</div>
+<%= link_to "Test", lazyload_path %>
