--- a/app/views/admin/layouts/_header.html.erb
+++ b/app/views/admin/layouts/_header.html.erb
@@ -26,7 +26,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="glyphicon glyphicon-globe"></i> 
-                <%= render "admin/layouts/counter", counter: @notifications.count %>
+                <%= render "admin/layouts/counter", counter: 1 %>
                 Notification
               </a>
               <ul class="dropdown-menu dropdown-block" role="menu" id="notificationList">
