--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,8 @@
   </head>
 
   <body>
+
     <div class="container">
-      <div id="flash" style="text-align: center">
-        <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>">
-            <%= message %>
-          </div>
-        <% end %>
-      </div>
       <% if user_signed_in? %>
         <div class="wrapper">
           <div class="box">
@@ -28,6 +22,13 @@
                 <div class="padding">
                   <div class="full col-sm-9">
                     <div class="row">
+                      <div id="flash" style="text-align: center">
+                        <% flash.each do |message_type, message| %>
+                          <div class="alert alert-<%= message_type %>">
+                            <%= message %>
+                          </div>
+                        <% end %>
+                      </div>
                       <%= yield %>
                     </div>
                     <%= render "pages/footer" %>
@@ -40,39 +41,56 @@
         <div id="postModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    Update Status
-                </div>
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                  Update Status
+              </div>
+              <%= form_tag add_new_status_path, method: :post,
+                class: "form center-block" do %>
+                <%= hidden_field_tag :user_id, current_user.id %>
                 <div class="modal-body">
-                  <form class="form center-block">
-                    <div class="form-group">
-                      <textarea class="form-control input-lg" autofocus="" placeholder="What do you want to share?"></textarea>
-                    </div>
-                  </form>
+                  <div class="form-group">
+                    <%= text_field_tag :title, params[:title],
+                      class: "form-control input-lg",
+                      autofocus: "", placeholder: "Title" %>
+                  </div>
+                  <div class="form-group">
+                    <%= text_area_tag :content, params[:content],
+                      class: "form-control input-lg", rows: 10,
+                      autofocus: "", placeholder: "What do you want to share?" %>
+                  </div>
+                  <div class="form-group">
+                    <img id="blah" src="#" style="display:none" class="form-control" />
+                  </div>
                 </div>
                 <div class="modal-footer">
                   <div>
-                    <button class="btn btn-primary btn-sm" data-dismiss="modal" aria-hidden="true">Post</button>
+                    <%= submit_tag "Post", class: "btn btn-primary btn-sm" %>
                     <ul class="pull-left list-inline">
                       <li>
                         <a href="">
                           <i class="glyphicon glyphicon-upload"></i>
                         </a>
                       </li>
-                      <li>
-                        <a href="">
-                          <i class="glyphicon glyphicon-camera"></i>
-                        </a>
+                      <li></li>
+                      <li>                         
+                        <form id="form1" runat="server">
+                          <label id="#bb">
+                            <i class="fa fa-image"></i>
+                            <%= file_field_tag :image, id: "imgInp",
+                              accept: 'image/jpeg,image/gif,image/png' %>
+                          </label>
+                        </form>
                       </li>
                       <li>
-                        <a href="">
+                        <span id="upload_image">
                           <i class="glyphicon glyphicon-map-marker"></i>
-                        </a>
+                        </span>
                       </li>
                     </ul>
                   </div>	
                 </div>
+              <% end %>
             </div>
           </div>
         </div>
