--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -31,8 +31,15 @@
         </a>
       </li>
       <li>
-        <a href="#">
-          <i class="glyphicon glyphicon-globe"></i> Notification
+        <a href="#" data-toggle="dropdown">
+          <i class="glyphicon glyphicon-globe"></i> 
+          <b style="color:red">6 </b>
+          Notification
+          <ul class="dropdown-menu">
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+            <li><a href="#">JavaScript</a></li>
+          </ul>
         </a>
       </li>
       <li>
