--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -402,3 +402,12 @@ border-radius: 50%;
     margin-top:10px;
   }		
 }
+
+#imgInp {
+  display: none;
+}
+
+#blah{
+  width:200px;
+  height:150px;
+}
