commet-like-unlike

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -411,3 +411,14 @@ border-radius: 50%;
   width:200px;
   height:150px;
 }
+
+.hidden {
+  display: none;
+}
+
+#button_comment{
+  margin-left: 10px;
+  margin-bottom:10px;
+  background-color: #3B5999;
+  color: white;
+}
