--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
                     <%= f.datetime_local_field :public_time, class: "form-control input-lg" %>
                   </div>
                   <div class="form-group">
-                    <img id="blah" src="#" style="display:none" class="form-control" />
+                    <img id="blah" src="" style="display:none" class="form-control" />
                   </div>
                 </div>
                 <div class="modal-footer">
